force-app/main/default/objects/Opportunity/fields/SK_Cross_Sell__c.field-meta.xml
<CustomField>
    <fullName>SK_Cross_Sell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SK Cross Sell</label>
    <type>Checkbox</type>
</CustomField>