force-app/main/default/objects/Opportunity/fields/Stalled_By_Client__c.field-meta.xml
<CustomField>
    <fullName>Stalled_By_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if Opportunity is Stalled by Client</description>
    <inlineHelpText>Stalled by Client during Opportunity Lifecycle.</inlineHelpText>
    <label>Stalled By Client</label>
    <type>Checkbox</type>
</CustomField>