force-app/main/default/objects/Opportunity/fields/Strategic_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategic Account Plan</label>
    <referenceTo>Strategic_Account_Plan__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>