force-app/main/default/objects/Opportunity/fields/Territory_ID_SK__c.field-meta.xml
<CustomField>
    <fullName>Territory_ID_SK__c</fullName>
    <formula>Account.Territory_ID_SK__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory ID SK</label>
    <type>Text</type>
</CustomField>