force-app/main/default/objects/Opportunity/fields/Time_Spent_For_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_For_Current_Stage__c</fullName>
    <formula>IF( ISNULL(LastStageChangeDate), FLOOR( ( NOW() - CreatedDate ) * 24 ), FLOOR( ( NOW() - LastStageChangeDate ) * 24  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Spent For Current Stage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>