force-app/main/default/objects/Opportunity/fields/Time_Spent_For_Current_Stage_Days__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_For_Current_Stage_Days__c</fullName>
    <formula>FLOOR( Time_Spent_For_Current_Stage__c / 24 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Spent For Current Stage (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>