force-app/main/default/objects/Opportunity/fields/Total_Product_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Gallons__c</fullName>
    <description>Rollup of Product Gallons</description>
    <label>Total Product Gallons</label>
    <summarizedField>OpportunityLineItem.Product_Gallons__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>