force-app/main/default/objects/Opportunity/fields/Total_Product_Pounds__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Pounds__c</fullName>
    <description>Rollup to Product Pounds</description>
    <label>Total Product Pounds</label>
    <summarizedField>OpportunityLineItem.Product_Pounds__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>