force-app/main/default/objects/Opportunity/fields/TPM_Cab_Pack__c.field-meta.xml
<CustomField>
    <fullName>TPM_Cab_Pack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TPM Cab Pack</label>
    <type>Checkbox</type>
</CustomField>