force-app/main/default/objects/Opportunity/fields/TPM_Central_Quoting_Assignment__c.field-meta.xml
<CustomField>
    <fullName>TPM_Central_Quoting_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person in Central quoting that will facilitate the request</description>
    <label>TPM Central Quoting Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>