force-app/main/default/objects/Opportunity/fields/TPM_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>TPM_Invoice_Date__c</fullName>
    <description>TPM Invoice Date</description>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>