force-app/main/default/objects/Opportunity/fields/TPM_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>TPM_Invoice_Number__c</fullName>
    <description>TPM Invoice Number</description>
    <label>Invoice Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>