force-app/main/default/objects/Opportunity/fields/TPM_Job_site_evaluation__c.field-meta.xml
<CustomField>
    <fullName>TPM_Job_site_evaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the job requires an onsite evaluation that will be charged</description>
    <label>TPM Job site evaluation</label>
    <type>Checkbox</type>
</CustomField>