force-app/main/default/objects/Opportunity/fields/TPM_Quick_Quote__c.field-meta.xml
<CustomField>
    <fullName>TPM_Quick_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this is a quick quote</description>
    <label>TPM Quick Quote</label>
    <type>Checkbox</type>
</CustomField>