force-app/main/default/objects/Opportunity/fields/TPM_Quote_Completed__c.field-meta.xml
<CustomField>
    <fullName>TPM_Quote_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the TPM quote is completed in WIN the quote creator checks this box</description>
    <inlineHelpText>When the TPM quote is completed in WIN the quote creator checks this box</inlineHelpText>
    <label>Quote Completed</label>
    <type>Checkbox</type>
</CustomField>