force-app/main/default/objects/Opportunity/fields/TPM_Quote_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>TPM_Quote_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person who completed TPM Quote</description>
    <inlineHelpText>Person who completed TPM Quote</inlineHelpText>
    <label>TPM Quote Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>