force-app/main/default/objects/Opportunity/fields/TPM_Quote_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>TPM_Quote_Completed_Date__c</fullName>
    <description>Date TPM quote was completed</description>
    <inlineHelpText>Date TPM quote was completed</inlineHelpText>
    <label>Quote Completed Date</label>
    <type>DateTime</type>
</CustomField>