force-app/main/default/objects/Opportunity/fields/TPM_Quote_Rejected__c.field-meta.xml
<CustomField>
    <fullName>TPM_Quote_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TPM Quote Rejected</label>
    <type>Checkbox</type>
</CustomField>