force-app/main/default/objects/Opportunity/fields/TPM_Quote_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>TPM_Quote_Rejected_Date__c</fullName>
    <label>TPM Quote Rejected Date</label>
    <type>DateTime</type>
</CustomField>