force-app/main/default/objects/Opportunity/fields/TPM_Quote_Request__c.field-meta.xml
<CustomField>
    <fullName>TPM_Quote_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check the box when you want to request the TPM Quote</description>
    <inlineHelpText>Check the box when you want to request the TPM Quote</inlineHelpText>
    <label>Submit Quote Request</label>
    <type>Checkbox</type>
</CustomField>