force-app/main/default/objects/Opportunity/fields/TPM_Quote_Request_To_Branch__c.field-meta.xml
<CustomField>
    <fullName>TPM_Quote_Request_To_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TPM Quote Request To Branch</description>
    <label>TPM Quote Request To Branch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Branch</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (TPM Quote Request To Branch)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>