force-app/main/default/objects/Opportunity/fields/TPM_Quote_Request_To_Business__c.field-meta.xml
<CustomField>
    <fullName>TPM_Quote_Request_To_Business__c</fullName>
    <description>Indicates which Business to send the Quote request. Based off the Product Selected.</description>
    <inlineHelpText>Indicates which Business to send the Quote request.. Based off the Product Selected.</inlineHelpText>
    <label>Quote Request To Business</label>
    <length>100</length>
    <type>Text</type>
</CustomField>