force-app/main/default/objects/Opportunity/fields/TPM_Quote_Request_To_Person__c.field-meta.xml
<CustomField>
    <fullName>TPM_Quote_Request_To_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person that is going to receive the TPM Quote request</description>
    <inlineHelpText>Person that is going to receive the TPM Quote request</inlineHelpText>
    <label>Assigned Support Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>