force-app/main/default/objects/Opportunity/fields/TPM_Quote_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>TPM_Quote_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person who requested TPM quote be completed</description>
    <inlineHelpText>Person who requested TPM quote be completed</inlineHelpText>
    <label>TPM Quote Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>