force-app/main/default/objects/Opportunity/fields/TPM_Quote_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>TPM_Quote_Requested_Date__c</fullName>
    <description>Date person requested a TPM quote</description>
    <inlineHelpText>Date person requested a TPM quote</inlineHelpText>
    <label>Quote Requested Date</label>
    <type>DateTime</type>
</CustomField>