force-app/main/default/objects/Opportunity/fields/TPM_Quote_Turnaround_Time__c.field-meta.xml
<CustomField>
    <fullName>TPM_Quote_Turnaround_Time__c</fullName>
    <description>Time it took from requesting a TPM quote until it was completed</description>
    <formula>if(
AND (isblank(TPM_Quote_Completed_Date__c), NOT (Inventory_Attached__c) ), ROUND(Now() - TPM_Quote_Requested_Date__c,0) ,
if (
AND (isblank(TPM_Quote_Completed_Date__c), Inventory_Attached__c, TPM_Quote_Requested_Date__c &lt; Inventory_Date__c), ROUND(Now() - Inventory_Date__c,0) ,
if (
AND (isblank(TPM_Quote_Completed_Date__c), Inventory_Attached__c, TPM_Quote_Requested_Date__c  &gt;=  Inventory_Date__c), ROUND(Now() - TPM_Quote_Requested_Date__c,0) ,
if (
AND (NOT(isblank(TPM_Quote_Completed_Date__c)), Inventory_Attached__c, TPM_Quote_Requested_Date__c &lt; Inventory_Date__c, TPM_Quote_Completed_Date__c &gt; Inventory_Date__c ), ROUND(TPM_Quote_Completed_Date__c  - Inventory_Date__c,0) ,
(TPM_Quote_Completed_Date__c - TPM_Quote_Requested_Date__c)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time it took from requesting a TPM quote until it was completed. Restarts when inventory gets attached</inlineHelpText>
    <label>Quote Turnaround Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>