force-app/main/default/objects/Opportunity/fields/TPM_Requested_To_Reference__c.field-meta.xml
<CustomField>
    <fullName>TPM_Requested_To_Reference__c</fullName>
    <formula>TPM_Quote_Request_To_Person__r.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TPM Requested To Reference</label>
    <type>Checkbox</type>
</CustomField>