force-app/main/default/objects/Opportunity/fields/TPM_Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>TPM_Sales_Order_Number__c</fullName>
    <description>TPM Sales Order number</description>
    <label>Sales Order Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>