force-app/main/default/objects/Opportunity/fields/Transformer_Amount_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Transformer_Amount_to_Customer__c</fullName>
    <description>Amount paid to customer for materials</description>
    <inlineHelpText>Amount paid to customer for materials</inlineHelpText>
    <label>Transformer Amount to Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>