force-app/main/default/objects/Opportunity/fields/Transformer_Backend_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Transformer_Backend_Revenue__c</fullName>
    <description>Amount received from selling materials from project after processing</description>
    <inlineHelpText>Amount received from selling materials from project after processing</inlineHelpText>
    <label>Transformer Backend Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>