force-app/main/default/objects/Opportunity/fields/Transformer_Product_Segment__c.field-meta.xml
<CustomField>
    <fullName>Transformer_Product_Segment__c</fullName>
    <description>Transformer Product Segment, requested by Jason Crawford.  Was in Beacon previously.</description>
    <inlineHelpText>Transformer Product Segmentation</inlineHelpText>
    <label>Transformer Product Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base Oil (Other)</fullName>
            </value>
            <value>
                <fullName>Cable/PILC (TRFM)</fullName>
            </value>
            <value>
                <fullName>Clean up</fullName>
            </value>
            <value>
                <fullName>Drums (TRFM)</fullName>
            </value>
            <value>
                <fullName>Form Oil</fullName>
            </value>
            <value>
                <fullName>Load &amp; Go (TRST)</fullName>
            </value>
            <value>
                <fullName>Mix (TRFM)</fullName>
            </value>
            <value>
                <fullName>Oil (CH60)</fullName>
            </value>
            <value>
                <fullName>Oil (CH60+)</fullName>
            </value>
            <value>
                <fullName>Oil &lt; 2 ppm (A31S)</fullName>
            </value>
            <value>
                <fullName>Oil 2 - 49 ppm (A31D)</fullName>
            </value>
            <value>
                <fullName>Oil 500 ppm - (DH3)</fullName>
            </value>
            <value>
                <fullName>Oil 50 - 499 ppm (DH1)</fullName>
            </value>
            <value>
                <fullName>Oil - Direct Ship</fullName>
            </value>
            <value>
                <fullName>Oil Refill (drain and fill)</fullName>
            </value>
            <value>
                <fullName>Pole &amp; Pads (TRFM)</fullName>
            </value>
            <value>
                <fullName>Sampling</fullName>
            </value>
            <value>
                <fullName>SF6</fullName>
            </value>
            <value>
                <fullName>Transformer Teardown (TRST)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>