force-app/main/default/objects/Opportunity/fields/Transformer_Transaction_Margin__c.field-meta.xml
<CustomField>
    <fullName>Transformer_Transaction_Margin__c</fullName>
    <description>Gross margin associated with transformer type transaction</description>
    <inlineHelpText>Gross margin associated with transformer type transaction</inlineHelpText>
    <label>Transformer Transaction Margin%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>