force-app/main/default/objects/Opportunity/fields/Transformer_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transformer_Transaction_Type__c</fullName>
    <description>Charge is when customer is paying us for material.  Credit is when we paying customer for material.</description>
    <inlineHelpText>Charge is when customer is paying us for material.  Credit is when we paying customer for material.</inlineHelpText>
    <label>Transformer Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charge</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>