force-app/main/default/objects/Opportunity/fields/Transportation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Amount__c</fullName>
    <label>Transportation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>