force-app/main/default/objects/Opportunity/fields/Turnaround__c.field-meta.xml
<CustomField>
    <fullName>Turnaround__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this opportunity is a turnaround job</description>
    <inlineHelpText>Indicates this opportunity is a turnaround job</inlineHelpText>
    <label>Turnaround</label>
    <type>Checkbox</type>
</CustomField>