force-app/main/default/objects/Opportunity/fields/Turnaround_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Turnaround_Opportunity_Type__c</fullName>
    <description>Type of Turnaround</description>
    <inlineHelpText>Type of Turnaround</inlineHelpText>
    <label>Turnaround Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refinery</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>OilSands/SAGD</fullName>
            </value>
            <value>
                <fullName>Pulp Mill</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Terminals</fullName>
            </value>
            <value>
                <fullName>Utl/Const</fullName>
            </value>
            <value>
                <fullName>Metals &amp; Minerals</fullName>
            </value>
            <value>
                <fullName>Petroleum Refining</fullName>
            </value>
            <value>
                <fullName>TechSonic</fullName>
                <isActive>false</isActive>
                <label>TechSonic</label>
            </value>
            <value>
                <fullName>Vacuum Services</fullName>
                <isActive>false</isActive>
                <label>Vacuum Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>