force-app/main/default/objects/Opportunity/fields/WIN_ID__c.field-meta.xml
<CustomField>
    <fullName>WIN_ID__c</fullName>
    <description>WIN ID of account picked for opportunity.</description>
    <formula>Account.WIN_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>WIN ID of account picked for opportunity.</inlineHelpText>
    <label>WIN ID</label>
    <type>Text</type>
</CustomField>