force-app/main/default/objects/Opportunity/fields/Zip_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Zip_Longitude__c</fullName>
    <formula>Account.ZIP_Master__r.Location__Longitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>