force-app/main/default/objects/Opportunity/fields/Zip_Master__c.field-meta.xml
<CustomField>
    <fullName>Zip_Master__c</fullName>
    <description>Link to Accounts Zip Master</description>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Account.ZIP_Master__c,  Account.ZIP_Master__r.ZIP__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip Master</label>
    <type>Text</type>
</CustomField>