force-app/main/default/objects/Opportunity/recordTypes/Central_Quoting_FS.recordType-meta.xml
<RecordType>
    <fullName>Central_Quoting_FS</fullName>
    <active>true</active>
    <businessProcess>All Clean Harbors Sales Process</businessProcess>
    <description>Field Services opportunity where the Central Quoting group will produce the quote. Similar process used by Techincal Services</description>
    <label>Central Quoting (FS)</label>
</RecordType>