force-app/main/default/objects/Opportunity/recordTypes/Central_Quoting_TS.recordType-meta.xml
<RecordType>
    <fullName>Central_Quoting_TS</fullName>
    <active>true</active>
    <businessProcess>All Clean Harbors Sales Process</businessProcess>
    <description>Technical Services opportunity where the Central Quoting group will produce the quote.  Similar process used  by Safety-Kleen for TPM.</description>
    <label>Central Quoting (TS)</label>
</RecordType>