force-app/main/default/objects/Opportunity/recordTypes/Clean_Harbors_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Clean_Harbors_Opportunity</fullName>
    <active>true</active>
    <businessProcess>All Clean Harbors Sales Process</businessProcess>
    <description>Standard Opportunity used for Clean Harbors sales.  (TS, FS, IS, Daylighting and Production Services, OG)</description>
    <label>Clean Harbors Opportunity</label>
</RecordType>