force-app/main/default/objects/Opportunity/recordTypes/FS_Harbor_Quote.recordType-meta.xml
<RecordType>
    <fullName>FS_Harbor_Quote</fullName>
    <active>true</active>
    <businessProcess>All Clean Harbors Sales Process</businessProcess>
    <description>Opportunity record type for FS HarborQuotes</description>
    <label>FS Harbor Quote</label>
</RecordType>