force-app/main/default/objects/Opportunity/recordTypes/Harbor_Quote_CP.recordType-meta.xml
<RecordType>
    <fullName>Harbor_Quote_CP</fullName>
    <active>true</active>
    <businessProcess>All Clean Harbors Sales Process</businessProcess>
    <description>Harbor Quote for CleanPack opportunities</description>
    <label>CP Harbor Quote</label>
</RecordType>