force-app/main/default/objects/Opportunity/recordTypes/Healthcare_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Healthcare_Opportunity</fullName>
    <active>true</active>
    <businessProcess>All Clean Harbors Sales Process</businessProcess>
    <description>Opportunites related to Healthcare Sales</description>
    <label>Healthcare Opportunity</label>
</RecordType>