force-app/main/default/objects/Opportunity/recordTypes/KPP_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>KPP_Opportunity</fullName>
    <active>true</active>
    <businessProcess>All Clean Harbors Sales Process</businessProcess>
    <description>Opportunites related to KPP Sales</description>
    <label>KPP Opportunity</label>
</RecordType>