force-app/main/default/objects/Opportunity/recordTypes/Lodging_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Lodging_Opportunity</fullName>
    <active>true</active>
    <businessProcess>All Clean Harbors Sales Process</businessProcess>
    <description>Lodging Opportunity</description>
    <label>Lodging Opportunity</label>
</RecordType>