force-app/main/default/objects/Opportunity/recordTypes/Safety_Kleen_BPS_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Safety_Kleen_BPS_Opportunity</fullName>
    <active>true</active>
    <businessProcess>All Clean Harbors Sales Process</businessProcess>
    <description>Safety Kleen and BPS Opportunity</description>
    <label>Safety Kleen / BPS Opportunity</label>
</RecordType>