force-app/main/default/objects/Opportunity/recordTypes/Safety_Kleen_Opportunity_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Safety_Kleen_Opportunity_Record_Type</fullName>
    <active>true</active>
    <businessProcess>All Clean Harbors Sales Process</businessProcess>
    <description>Safety-Kleen Branch Services, Thermo fluids, or Emerald Services Opportunity</description>
    <label>Safety Kleen Opportunity</label>
</RecordType>