force-app/main/default/objects/Opportunity/recordTypes/SK_National_Accounts_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>SK_National_Accounts_Opportunity</fullName>
    <active>true</active>
    <businessProcess>All Clean Harbors Sales Process</businessProcess>
    <description>SK National Accounts Opportunity</description>
    <label>SK National Accounts Opportunity</label>
</RecordType>