force-app/main/default/objects/Opportunity/recordTypes/TPM_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>TPM_Opportunity</fullName>
    <active>true</active>
    <businessProcess>All Clean Harbors Sales Process</businessProcess>
    <description>TPM Sales Opportunity</description>
    <label>TPM Opportunity</label>
</RecordType>