force-app/main/default/objects/Opportunity/recordTypes/Transformer_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Transformer_Opportunity</fullName>
    <active>true</active>
    <businessProcess>All Clean Harbors Sales Process</businessProcess>
    <description>Transformer Opportunity</description>
    <label>Transformer Opportunity</label>
</RecordType>