force-app/main/default/objects/Opportunity/validationRules/Account_is_expired.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_is_expired</fullName>
    <active>true</active>
    <description>prevent save if the account is expired or inactive</description>
    <errorConditionFormula>OR(Account.Expired__c = true, ISPICKVAL(Account.Status__c, &apos;Inactive&apos; ))</errorConditionFormula>
    <errorMessage>Cannot create opportunity on an expired or inactive account</errorMessage>
</ValidationRule>