force-app/main/default/objects/Opportunity/validationRules/Cannot_Change_Quote_Requested_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Quote_Requested_Date</fullName>
    <active>true</active>
    <description>When Opportunity Business Segment is Cannot Quote then Quote requested date and Quote turnaround time cannot be changed.</description>
    <errorConditionFormula>AND(ISPICKVAL( Opportunity_Business_Segment__c , &apos;Cannot Quote&apos;),  ISCHANGED( TPM_Quote_Turnaround_Time__c )  , ISCHANGED( TPM_Quote_Requested_Date__c ) )</errorConditionFormula>
    <errorMessage>Cannot change Quote Requested Date when Opportunity Business Segment is Cannot Quote.</errorMessage>
</ValidationRule>