force-app/main/default/objects/Opportunity/validationRules/Cant_Unchecked_Ready_to_Schedule.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Unchecked_Ready_to_Schedule</fullName>
    <active>true</active>
    <description>Ready to Schedule creates scheduling case, so once checked cannot be unchecked.</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &apos;Integration&apos;,
$Profile.Name &lt;&gt; &apos;Salesforce API Only System Integrations&apos;,
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,

PRIORVALUE( Job_Schedule_Requested__c )= True,
Job_Schedule_Requested__c = False
)</errorConditionFormula>
    <errorDisplayField>Job_Schedule_Requested__c</errorDisplayField>
    <errorMessage>Ready to Schedule cannot be unchecked once checked, please contact Central Quoting team for further assistance.</errorMessage>
</ValidationRule>