force-app/main/default/objects/Opportunity/validationRules/Close_date_cannot_be_in_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_date_cannot_be_in_future</fullName>
    <active>true</active>
    <description>Do not allow the user to close an opportunity in the future</description>
    <errorConditionFormula>and( 
CloseDate &gt; today(), 
NOT ($Profile.Name = &quot;Integration&quot;),NOT ($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),  
or(text(StageName) = &apos;Closed Won&apos;, Text(StageName) = &apos;Closed Lost&apos;))</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>You cannot move an opportunity to a closed stage unless the close date is updated to today or a date in the past.  Please update close date to today or a date in the past.</errorMessage>
</ValidationRule>