force-app/main/default/objects/Opportunity/validationRules/Do_not_allow_assignment_to_Exec.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_allow_assignment_to_Exec</fullName>
    <active>true</active>
    <description>rule written for CCC not to assign to Kevin Hayden</description>
    <errorConditionFormula>and(ISCHANGED(OwnerId)
,    Owner.User_ID_18__c  == &apos;005j0000000iu8mAAA&apos;)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Opp cannot be assigned to this person. Please review.</errorMessage>
</ValidationRule>