force-app/main/default/objects/Opportunity/validationRules/Enter_Lost_Competitor.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Lost_Competitor</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
OR(
ISPICKVAL(Lost_Reason__c, "Competitor (Transportation)"),
ISPICKVAL(Lost_Reason__c, "Competitor (Better Price)")
),
NOT($Profile.Name = "Integration"),
NOT($Profile.Name = "Salesforce API Only System Integrations"),
ISBLANK(Primary_Competitor__c),
OR(
RecordType.Name = "Clean Harbors Opportunity",
RecordType.Name = "CP Harbor Quote",
RecordType.Name = "FS Harbor Quote",
RecordType.Name = "Healthcare Opportunity"
)
)
)</errorConditionFormula>
    <errorDisplayField>Primary_Competitor__c</errorDisplayField>
    <errorMessage>Please enter Competitor</errorMessage>
</ValidationRule>