force-app/main/default/objects/Opportunity/validationRules/Enter_Lost_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Lost_Reason</fullName>
    <active>false</active>
    <description>Force user to pick lost reason when losing an opportunity</description>
    <errorConditionFormula>AND( 
ISPICKVAL( StageName , &quot;8 - Closed Lost&quot;), 
NOT( $Profile.Name = &quot;Integration&quot;),
NOT( $Profile.Name = &quot;Salesforce API Only System Integrations&quot;),
ISBLANK(text(Lost_Reason__c)) 
)</errorConditionFormula>
    <errorDisplayField>Lost_Reason__c</errorDisplayField>
    <errorMessage>Please pick a Lost reason</errorMessage>
</ValidationRule>